--- a/_config.yml
+++ b/_config.yml
@@ -5,27 +5,21 @@ description: Erald David Link Blog
 # Theme settings
 remote_theme: pages-themes/cayman@v0.2.0
 plugins:
-- jekyll-remote-theme
+  - jekyll-remote-theme
+  - jekyll-feed
+  - jekyll-seo-tag
 
-# Navigation
-header_pages:
-- about_me.md
-- essays.md
-- projects.md
+# Navigation structure
+nav:
+  - title: About Me
+    url: /about
+  - title: Essays
+    url: /essays
+  - title: Projects
+    url: /projects
 
-navigation:
-- title: About Me
-url: /about_me
-- title: Essays
-url: /essays
-- title: Projects
-url: /projects
-
-# Build Settings
+# Build settings
 markdown: kramdown
-plugins:
-- jekyll-feed
-- jekyll-seo-tag
 
 # Exclude from processing
 exclude:
