--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,8 @@
 # Site settings
 title: Homepage
-description: Erald David Link Blog
-
-# Theme settings
-remote_theme: pages-themes/cayman@v0.2.0
-plugins:
-  - jekyll-remote-theme
-  - jekyll-feed
-  - jekyll-seo-tag
+description: Erald David link Blog
+theme: jekyll-theme-minimal
+show_downloads: false
 
 # Navigation structure
 nav:
@@ -20,6 +15,9 @@ nav:
 
 # Build settings
 markdown: kramdown
+plugins:
+  - jekyll-feed
+  - jekyll-seo-tag
 
 # Exclude from processing
 exclude:
